@@ -1,12 +1,7 @@
 {
-  "count": 26,
+  "count": 23,
   "uniques": 13,
   "views": [
-    {
-      "timestamp": "2022-07-12T00:00:00Z",
-      "count": 4,
-      "uniques": 1
-    },
     {
       "timestamp": "2022-07-13T00:00:00Z",
       "count": 1,
@@ -54,6 +49,11 @@
     },
     {
       "timestamp": "2022-07-25T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-07-26T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
